# viv_pi

./: .coveragerc  .gitignore  MANIFEST.in  Pipfile  config.py  install.bat  install.sh  packages.txt  pull.sh  push.sh  pyproject.toml  run_tests.py  setup.py  start.py  start.sh  test.sh
scripts/: build.sh  dev-setup.sh  install.bat  install.sh  pull.sh  push.sh  start.sh  test.sh
src/main/: config.py  main.py  system_config.py
src/main/controllers/: controller.py
src/main/controllers/audio/: audio_config.py  audio_controller.py
src/main/experiments/: dht_collection_experiment.py  rgbled_experiment.py  write_out_color_steps.py
src/main/services/: input_reporting_service.py
src/main/utils/: color_functions.py  colors.py  data.py  denoise.py  rgb_color.py  time_functions.py
src/test/comparators/: color_comparator.py
src/test/framework/: annotations.py  assertions.py  mocks.py  test.py  test_context.py  test_runner.py
src/test/utils/: color_functions_test.py  colors_test.py  conversions_test.py  data_test.py  denoise_test.py  rgb_color_test.py  stats.py  time_functions_test.py
tests/comparators/: color_comparator.py
tests/controllers/lighting/: lighting_controller_test.py
tests/controllers/temperature/: temperature_controller_test.py
tests/utils/: color_functions_test.py  colors_test.py  conversions_test.py  data_test.py  denoise_test.py  rgb_color_test.py  stats.py  time_functions_test.py
vivpi/: __main__.py  app.py  main.py  system_config.py
vivpi/controllers/audio/: audio_controller.py
vivpi/controllers/humidity/: humidity_config.py  humidity_controller.py
vivpi/controllers/lighting/: lighting_config.py  lighting_controller.py  natural_colors.py
vivpi/controllers/temperature/: temperature_config.py  temperature_controller.py
vivpi/experiments/: dht_collection_experiment.py  led_experiment.py
vivpi/utils/: clamp.py  color_functions.py  colors.py  conversions.py  denoise.py  rgb_color.py  stats.py  time_functions.py
vivpi/utils/devices/: gpio_device.py  rgb_gpio_device.py  temp_hum_gpio_device.py
(+12 files in other folders)
